--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Pokemoni</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="main">
+      <div class="start1">
+        <div class="player1">
+          <h2>Player 1</h2>
+          <button class="display-player1">Show All Pokemons</button>
+        </div>
+        <div class="player1-list"></div>
+        <div class="player1-overview"></div>
+        <div class="player1-ready"></div>
+        <div class="player1-healthPoints"></div>
+      </div>
+      <div class="start2">
+        <div class="player2">
+          <h2>Player 2</h2>
+          <button class="display-player2">Show All Pokemons</button>
+        </div>
+        <div class="player2-list"></div>
+        <div class="player2-overview"></div>
+        <div class="player2-ready"></div>
+        <div class="player2-healthPoints"></div>
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
